--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "An API for Magic the Gathering cards.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix interface",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Daniel Clayton",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
